<resources>
    <string name="app_name" translatable="false">JackRush</string>
    <string name="log_out">LOG OUT</string>
    <string name="account">Account</string>
    <string name="enter_bet_amount">Enter bet amount:</string>
    <string name="start">Start</string>
    <string name="type_in_amount">Type in amount</string>
    <string name="login_welcome">Please log in</string>
    <string name="Username">username</string>
    <string name="Password">password</string>
    <string name="Login">Log in</string>
    <string name="Signup">Sign up</string>
    <string name="preference_file_key">preferenceFileNameJackRush\n</string>
    <string name="preference_userId_key">jackRushPreferenceUserIdKey</string>
    <string name="Welcome">Welcome</string>
    <string name="play">PLAY</string>
    <string name="bet_amt">Enter bet amount:</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="more">More</string>
    <string name="money">$$$</string>
    <string name="acct">Already have an account?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="log_in">LOG IN</string>
    <string name="name">name</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="sign">Sign up</string>
    <string name="remember_me">Remember me</string>
    <string name="stand">Stand</string>
    <string name="hit">Hit</string>
    <string name="deal">Deal</string>
    <string name="channel_name">channel name\n</string>
    <string name="channel_description">channel description</string>
    <string name="applogo">appLogo</string>
    <string name="rank">🏆</string>
    <string name="disclaimer">DISCLAIMER:\n JackRush uses fake money therefore,\n no real money is earned.</string>
    <string name="usernameSU">username</string>
</resources>