<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/navy">

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:buttonTint="@color/grey"
        android:text="@string/remember_me"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.191"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupButt" />

    <TextView
        android:id="@+id/signup"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:gravity="center"
        android:text="@string/sign"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.125" />

    <EditText
        android:id="@+id/nameInput"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_marginTop="15dp"
        android:autofillHints="name"
        android:backgroundTint="@color/grey"
        android:gravity="center"
        android:hint="@string/usernameSU"
        android:textColor="@color/white"
        android:inputType="text"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup"
        app:layout_constraintVertical_bias="0.133" />

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:autofillHints="emailAddress"
        android:hint="@string/email"
        android:textColor="@color/white"
        android:textColorHint="@color/grey"
        android:backgroundTint="@color/grey"
        app:layout_constraintTop_toBottomOf="@+id/nameInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/passowrdInput"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:autofillHints="password"
        android:hint="@string/password"
        android:textColor="@color/white"
        android:textColorHint="@color/grey"
        android:backgroundTint="@color/grey"
        app:layout_constraintTop_toBottomOf="@+id/emailInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/signupButt"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/purple"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passowrdInput" />


</androidx.constraintlayout.widget.ConstraintLayout>