<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/navy"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LandingPage">

    <TextView
        android:id="@+id/adminTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.237"
        tools:text="Welcome"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/betAmt"
        android:layout_width="200dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@+id/adminTextview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/adminButt"
        android:text="@string/bet_amt"
        android:textSize="20sp"
        android:gravity="center"
        android:textColor="@color/white"
        />

    <EditText
        android:layout_width="200dp"
        android:layout_height="50dp"
       android:hint="@string/money"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@+id/betAmt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <Button
        android:id="@+id/adminButt"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_marginTop="116dp"
        android:text="@string/play"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adminTextview"
        app:layout_constraintVertical_bias="0.247"
        tools:visibility="visible" />

    <Button
        android:id="@+id/leaderboard"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:text="@string/leaderboard"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adminButt"
        />

    <Button
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:text="@string/more"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/leaderboard"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>